--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "url_base = 'https://www.ev.or.kr/portal/monitor/evminfo?'\n",
-    "url_add = 'sid=30200003'\n",
+    "url_add = 'sid=ME19A166'\n",
     "url = url_base+url_add\n",
     "html = urlopen(url)\n",
     "\n",
@@ -264,40 +264,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DC차데모\n",
-      "AC3상\n",
+      "<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
+      "\t\t\t </span>\n",
+      " \r\n",
+      "\t\t\t \n",
+      "<span style=\"text-decoration:underline;\">DC콤보</span>\n",
       "DC콤보\n",
-      "1\n",
-      "[['DC차데모', 'AC3상', 'DC콤보']]\n"
+      "<span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>\n",
+      "아이오닉스파크볼트i3코나쏘울니로\n",
+      "[['DC콤보']]\n",
+      "[['DC콤보']]\n"
      ]
     }
    ],
    "source": [
     "tmp=[]\n",
     "i=[]\n",
+    "j=[]\n",
     "for tmp_using in soup.find_all(class_='td2'):\n",
     "    for a in tmp_using.find_all('span'):\n",
     "        if len(a.get_text())>6:\n",
     "            break\n",
-    "        elif a.get_text()=='사용가능':\n",
+    "        if a.get_text()=='사용가능':\n",
+    "            break\n",
+    "        elif a.get_text()=='사용중':\n",
+    "            break\n",
+    "        elif a.get_text()=='사용불가':\n",
     "            break\n",
     "        else:\n",
-    "            print(a.get_text())\n",
     "            tmp.append(a.get_text())\n",
-    "    i.append(tmp)\n",
-    "    for a in tmp_using.find_all(class_='ev_type t03'):\n",
+    "    j.append(tmp)\n",
+    "    for tmp_using in soup.find_all(class_='ev_type t03'):\n",
     "        for b in tmp_using.find_all('span'):\n",
-    "            if len(b.get_text())<5:\n",
-    "                print(b.get_text())\n",
-    "\n",
+    "            print(b)\n",
+    "            print(b.get_text())\n",
+    "            if len(b.get_text())<6:\n",
+    "                tmp.append(b.get_text())\n",
+    "        i.append(tmp)\n",
+    "print(j)\n",
     "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tmp_using in soup.find_all(class_='td2'):\n",
+    "        for a in tmp_using.find_all('span'):\n",
+    "            #print(a)\n",
+    "            if len(a.get_text())>6:\n",
+    "                break\n",
+    "            if a.get_text()=='사용가능':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용중':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용불가':\n",
+    "                break\n",
+    "            else:\n",
+    "                temp.append(a.get_text())\n",
+    "        charge.append(temp)\n",
+    "        tmp=[]\n",
+    "    for tmp_using in soup.find_all(class_='ev_type t03'):\n",
+    "        for b in tmp_using.find_all('span'):\n",
+    "            if len(b.get_text())>6:\n",
+    "                break\n",
+    "            else:\n",
+    "                tmp.append(b.get_text())\n",
+    "            #print(tmp)\n",
+    "        charge.append(tmp)\n",
+    "    #print(len(charge), charge)"
    ]
   },
   {
