--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "url_base = 'https://www.ev.or.kr/portal/monitor/evminfo?'\n",
-    "url_add = 'sid=ME19A166'\n",
+    "url_add = 'sid=ME18A288'\n",
     "url = url_base+url_add\n",
     "html = urlopen(url)\n",
     "\n",
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KH양주휴게소\n"
+      "강남구청 삼성로 별관 부설 주차장\n"
      ]
     }
    ],
@@ -57,18 +57,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "경기도 양주시 장흥면 서울외곽순환고속도로 58  환경부(한국자동차환경협회) 1661-9408 유료\r\n",
-      "\t\t\t 급속(50kW)\r\n",
-      "\t\t\t \r\n",
-      "\t\t\t없음 \n",
-      "['사용가능']\n"
+      "서울특별시 강남구 삼성로 628  환경부(한국자동차환경협회) 1661-9408 무료\r\n",
+      "\t\t\t 급속(100kW멀티)\r\n",
+      "\t\t\t 5분당 300원, 주말 무료\r\n",
+      "\t\t\t \n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-261c2c91787c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mtmp_using\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'ev_char c01'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0musing\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0musing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_using\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0musing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +109,7 @@
        "'\\n사용중\\n'"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -134,7 +144,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -163,10 +173,10 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "0"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 0 0\n"
+      "0 0 0\n"
      ]
     }
    ],
@@ -208,29 +218,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DC차데모\n",
-      "AC3상\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-63-8d7146570e59>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for tmp_using in soup.find_all(class_='td2'):\n",
     "    a = tmp_using.find_all('span')\n",
@@ -241,18 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DC차데모\n",
-      "AC3상\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for tmp_using in soup.find_all(class_='td2'):\n",
     "    for a in tmp_using.find_all('span'):\n",
@@ -264,23 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
-      "\t\t\t </span>\n",
-      " \r\n",
-      "\t\t\t \n",
-      "<span style=\"text-decoration:underline;\">DC콤보</span>\n",
-      "DC콤보\n",
-      "<span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>\n",
-      "아이오닉스파크볼트i3코나쏘울니로\n",
-      "[['DC콤보']]\n",
-      "[['DC콤보']]\n"
+      "[]\n",
+      "[]\n"
      ]
     }
    ],
@@ -314,9 +287,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 16)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<tokenize>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    for tmp_using in soup.find_all(class_='ev_type t03'):\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "for tmp_using in soup.find_all(class_='td2'):\n",
     "        for a in tmp_using.find_all('span'):\n",
@@ -342,6 +324,204 @@
     "            #print(tmp)\n",
     "        charge.append(tmp)\n",
     "    #print(len(charge), charge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<td class=\"td2\">\n",
+      "<dvi class=\"ev_type t03\">\n",
+      "<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
+      "\t\t\t </span>\n",
+      "<br/>\n",
+      "<span style=\"text-decoration:underline;\">DC콤보</span>\n",
+      "<span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>\n",
+      "</dvi>\n",
+      "</td>, <td class=\"td2\">\n",
+      "<dvi class=\"ev_type t03\">\n",
+      "<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
+      "\t\t\t </span>\n",
+      "<br/>\n",
+      "<span style=\"text-decoration:underline;\">DC콤보</span>\n",
+      "<span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>\n",
+      "</dvi>\n",
+      "</td>]\n",
+      "['DC콤보']\n"
+     ]
+    }
+   ],
+   "source": [
+    "charge=[]\n",
+    "temp=[]\n",
+    "for tmp_using in soup.find_all(class_='table_01'):\n",
+    "    if len(tmp_using)<=5:\n",
+    "        for a in tmp_using.find_all('span'):\n",
+    "            print(a)\n",
+    "            if len(a.get_text())>6:\n",
+    "                break\n",
+    "            if a.get_text()=='사용가능':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용중':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용불가':\n",
+    "                break\n",
+    "            else:\n",
+    "                temp.append(a.get_text())\n",
+    "        charge.append(temp)\n",
+    "        print(charge)\n",
+    "        \n",
+    "    td2 = soup.find_all(class_='td2')\n",
+    "    print(td2)\n",
+    "    for te in td2[0:]:\n",
+    "        test=[]\n",
+    "        for a in te.find_all('span'):\n",
+    "            if a.get_text()=='사용가능':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용중':\n",
+    "                break\n",
+    "            elif a.get_text()=='사용불가':\n",
+    "                break\n",
+    "            elif a.get_text()==' ':\n",
+    "                break\n",
+    "            elif len(a.get_text())<6:\n",
+    "                tmp=[]\n",
+    "                tmp.append(a.get_text())\n",
+    "                #print(tmp)\n",
+    "                test+=tmp\n",
+    "        test= str(\"+\".join(test))\n",
+    "        charge.append(test)\n",
+    "        print(charge)\n",
+    "        if test!=None:\n",
+    "            break\n",
+    "            \n",
+    "        #print(tmp_using.fina_all('div'))\n",
+    "        #print(tmp_using)\n",
+    "        #print(len(tmp_using))\n",
+    "    else:\n",
+    "        print()\n",
+    "        #print(tmp_using.fina_all('div'))\n",
+    "        print(tmp_using)\n",
+    "        print(len(tmp_using))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
+      "\t\t\t </span>, <span style=\"text-decoration:underline;\">DC콤보</span>, <span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>]\n",
+      "11\n",
+      "[<span style=\"display:inline-block;text-align:center;border:0px solid #000000;width:30px;height:22px;background:url(/mobile/images/common/ev_type_dc.png) no-repeat center 0; background-size:20px 20px;\"> \r\n",
+      "\t\t\t </span>, <span style=\"text-decoration:underline;\">DC콤보</span>, <span style=\"font-size:12px;\"><br/>아이오닉<br/>스파크<br/>볼트<br/>i3<br/>코나<br/>쏘울<br/>니로</span>]\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tmp_using in soup.find_all(class_='td2'):\n",
+    "    if len('ev_type t03')>=11:\n",
+    "        print(tmp_using.find_all('span'))\n",
+    "    print(len('ev_type t03'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name =[]  #이름\n",
+    "add = []  #주소\n",
+    "time =[]  #사용가능시간\n",
+    "typ = []  # 구분\n",
+    "agency = [] # 운영기관\n",
+    "phone = [] # 연락처\n",
+    "fee = [] # 충전요금\n",
+    "amount = [] # 급속충전량\n",
+    "etc = [] # 참고사항\n",
+    "nouse = [] # 운전상태\n",
+    "using = []\n",
+    "ben = []\n",
+    "charge = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['계룡농협하나로마트', '계룡농협하나로마트'] ['DC콤보', 'DC콤보'] ['\\n사용가능\\n', '\\n사용가능\\n'] ['충청남도 논산시 연산면 청동로 34 ', '충청남도 논산시 연산면 청동로 34 '] ['24시간 이용가능', '24시간 이용가능'] ['1661-9408', '1661-9408']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "charge=[]\n",
+    "tmp_using = soup.find_all(class_='ev_type t03')\n",
+    "#print(tmp_using)\n",
+    "for te in tmp_using[0:]:\n",
+    "    #print(te)\n",
+    "    for a in te.find_all('span'):\n",
+    "        if a.get_text()==' ':\n",
+    "            break\n",
+    "        elif len(a.get_text())<6:\n",
+    "            charge.append(a.get_text())\n",
+    "            \n",
+    "            n_tmp = soup.find_all('h2')\n",
+    "            name.append(n_tmp[0].get_text())\n",
+    "\n",
+    "            t_tmp = soup.find_all('em')\n",
+    "            time.append(t_tmp[0].get_text())\n",
+    "\n",
+    "            ty_tmp = soup.find_all('dd')\n",
+    "            typ.append(ty_tmp[0].get_text())\n",
+    "\n",
+    "            info_tmp = soup.find_all(class_='table_02')\n",
+    "            dinfo = info_tmp[0].find_all('td')\n",
+    "            add.append(dinfo[0].get_text())\n",
+    "            agency.append(dinfo[1].get_text())\n",
+    "            phone.append(dinfo[2].get_text())\n",
+    "    \n",
+    "            tmp_fee = dinfo[3].get_text()\n",
+    "            tmp_fee = re.sub('&nbsp; | &nbsp; |\\n|\\t|\\r|', '', tmp_fee)\n",
+    "            fee.append(tmp_fee)\n",
+    "            \n",
+    "            tmp_amount = dinfo[4].get_text()\n",
+    "            tmp_amount = re.sub('&nbsp; | &nbsp; |\\n|\\t|\\r|', '', tmp_amount)\n",
+    "            amount.append(tmp_amount)\n",
+    "            \n",
+    "            tmp_etc = dinfo[5].get_text()\n",
+    "            tmp_etc = re.sub('&nbsp; | &nbsp; |\\n|\\t|\\r|', '', tmp_etc)\n",
+    "            etc.append(tmp_etc)\n",
+    "            \n",
+    "            for u_tmp in soup.find_all(class_='td3'):\n",
+    "                using.append(u_tmp.get_text())\n",
+    "                break\n",
+    "            #print(using)\n",
+    "                #for a in u_tmp.find_all('span'):\n",
+    "                #print(u_tmp)\n",
+    "                    #using.append(u_tmp.get_text())\n",
+    "            \n",
+    "print(name, charge, using, add, time, phone)"
    ]
   },
   {
