--- a/realtime_ev_project.ipynb
+++ b/realtime_ev_project.ipynb
@@ -120,6 +120,7 @@
    ],
    "source": [
     "import time\n",
+    "\n",
     "def thread_run():\n",
     "    print('====',time.ctime(),'====')\n",
     "    count=0\n",
@@ -128,20 +129,8 @@
     "        create_date=[]\n",
     "    \n",
     "    sid = [] #충전소ID\n",
-    "    name =[]  #충전소_이름\n",
-    "    c_name=[] #충전기_충전소이름\n",
-    "    add = []  #주소\n",
-    "    u_time =[]  #사용가능시간\n",
-    "    typ = []  # 구분\n",
-    "    agency = [] # 운영기관\n",
-    "    phone = [] # 연락처\n",
-    "    fee = [] # 충전요금\n",
-    "    amount = [] # 급속충전량\n",
-    "    etc = [] # 참고사항\n",
-    "    using = [] #사용현황\n",
-    "    charge = [] #충전기타입\n",
-    "    city = [] #시\n",
-    "    gu = [] #구\n",
+    "    c_station = {'name':[], 'u_time':[], 'agency': [], 'city':[], 'gu':[], 'add':[],'phone':[], 'fee':[],'etc':[]}\n",
+    "    charger = {'c_name':[], 'typ':[], 'charge':[], 'using':[], 'amount':[]}\n",
     "    \n",
     "    \n",
     "    for k in range(2,19):\n",
@@ -187,48 +176,48 @@
     "        for tmp_using in soup.find_all(class_='table_01'):\n",
     "            #if len(tmp_using)<=5:\n",
     "            n_tmp = soup.find_all('h2')\n",
-    "            name.append(n_tmp[0].get_text())\n",
+    "            c_station['name'].append(n_tmp[0].get_text())\n",
     "\n",
     "            t_tmp = soup.find_all('em')\n",
-    "            u_time.append(t_tmp[0].get_text())\n",
+    "            c_station['u_time'].append(t_tmp[0].get_text())\n",
     "\n",
     "            info_tmp = soup.find_all(class_='table_02')\n",
     "            dinfo = info_tmp[0].find_all('td')\n",
-    "            add.append(dinfo[0].get_text())\n",
-    "            agency.append(dinfo[1].get_text())\n",
-    "            phone.append(dinfo[2].get_text())\n",
+    "            c_station['add'].append(dinfo[0].get_text())\n",
+    "            c_station['agency'].append(dinfo[1].get_text())\n",
+    "            c_station['phone'].append(dinfo[2].get_text())\n",
     "\n",
     "            tmp_fee = dinfo[3].get_text()\n",
     "            tmp_fee = re.sub('&nbsp; | &nbsp; |\\n|\\t|\\r|', '', tmp_fee)\n",
-    "            fee.append(tmp_fee)\n",
+    "            c_station['fee'].append(tmp_fee)\n",
     "\n",
     "\n",
     "            tmp_etc = dinfo[5].get_text()\n",
     "            tmp_etc = re.sub('&nbsp; | &nbsp; |\\n|\\t|\\r|', '', tmp_etc)\n",
-    "            etc.append(tmp_etc)\n",
+    "            c_station['etc'].append(tmp_etc)\n",
     "\n",
     "            city_tmp = dinfo[0].get_text()[0:2]\n",
     "            gu_tmp = dinfo[0].get_text().split(' ')\n",
     "            gu_tmp = gu_tmp[1]\n",
-    "            gu.append(gu_tmp)\n",
-    "            city.append(city_tmp)\n",
+    "            c_station['gu'].append(gu_tmp)\n",
+    "            c_station['city'].append(city_tmp)\n",
     "\n",
     "            if len(tmp_using)<=5:\n",
     "\n",
     "                n_tmp = soup.find_all('h2')\n",
-    "                c_name.append(n_tmp[0].get_text())\n",
+    "                charger['c_name'].append(n_tmp[0].get_text())\n",
     "\n",
     "                ty_tmp = soup.find_all('dd')\n",
-    "                typ.append(ty_tmp[0].get_text())\n",
+    "                charger['typ'].append(ty_tmp[0].get_text())\n",
     "\n",
     "                tmp_amount = dinfo[4].get_text()\n",
     "\n",
     "                tmp_amount = re.findall('\\d+', tmp_amount) #숫자만 추출\n",
-    "                amount.append(tmp_amount)\n",
+    "                charger['amount'].append(tmp_amount)\n",
     "\n",
     "                for u_tmp in soup.find_all(class_='td3'):\n",
     "                    tmp = re.sub('\\n', '', u_tmp.get_text())\n",
-    "                    using.append(tmp)\n",
+    "                    charger['using'].append(tmp)\n",
     "\n",
     "\n",
     "                td2 = soup.find_all(class_='td2')\n",
@@ -249,7 +238,7 @@
     "                                #print(tmp)\n",
     "                            test+=tmp\n",
     "                    test= str(\"+\".join(test))\n",
-    "                    charge.append(test)\n",
+    "                    charger['charge'].append(test)\n",
     "                    if test!=None:\n",
     "                        break\n",
     "            elif len(tmp_using)<=7:\n",
@@ -261,22 +250,22 @@
     "                        if a.get_text()==' ':\n",
     "                            break\n",
     "                        elif len(a.get_text())<6:\n",
-    "                            charge.append(a.get_text())\n",
+    "                            charger['charge'].append(a.get_text())\n",
     "\n",
     "                            n_tmp = soup.find_all('h2')\n",
-    "                            c_name.append(n_tmp[0].get_text())\n",
+    "                            charger['c_name'].append(n_tmp[0].get_text())\n",
     "\n",
     "                            ty_tmp = soup.find_all('dd')\n",
-    "                            typ.append(ty_tmp[0].get_text())\n",
+    "                            charger['typ'].append(ty_tmp[0].get_text())\n",
     "\n",
     "                            tmp_amount = dinfo[4].get_text()\n",
     "\n",
     "                            tmp_amount = re.findall('\\d+', tmp_amount) #숫자만 추출\n",
-    "                            amount.append(tmp_amount)\n",
+    "                            charger['amount'].append(tmp_amount)\n",
     "\n",
     "                            for u_tmp in soup.find_all(class_='td3'):\n",
     "                                tmp = re.sub('\\n', '', u_tmp.get_text())\n",
-    "                                using.append(tmp)\n",
+    "                                charger['using'].append(tmp)\n",
     "                                break\n",
     "    #충전기_생성날짜\n",
     "    tmp_len3 = len(c_name)-tmp_len_2\n",
@@ -292,8 +281,8 @@
     "    \n",
     "    \n",
     "    print('data_finish')\n",
-    "    print('name', len(name))\n",
-    "    print('city', len(city), 'gu',len(gu))\n",
+    "    print('name', len(c_station['name']))\n",
+    "    print('city', len(c_station['city']), 'gu',len(c_station['gu']))\n",
     "    print('sid', len(sid))\n",
     "    print('date', len(create_date))\n",
     "    print('충전기날짜',len(c_create_date))\n",
